# OpenRemote-Control

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  quickstart.sh
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_account_credential_key_id_and_more.py
backend/apps/accounts/tests/: test_api.py  test_models.py
backend/apps/adapters/: admin.py  models.py  urls.py
backend/apps/adapters/migrations/: 0001_initial.py
backend/apps/approvals/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/approvals/migrations/: 0001_initial.py
backend/apps/approvals/tests/: test_api.py  test_models.py  test_tasks.py
backend/apps/audit/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/audit/tests/: test_api.py  test_models.py  test_signals.py  test_tasks.py
backend/apps/connectors/: admin.py  auth.py  crypto.py  models.py  qr.py  serializers.py  service.py  urls.py  views.py
backend/apps/connectors/migrations/: 0001_initial.py  0002_connectorkey_pairing.py
backend/apps/connectors/tests/: test_api.py  test_ask_reply.py  test_delivery.py  test_drive_bind.py  test_identity.py  test_session_naming.py  test_session_topic.py
backend/apps/core/: auth.py  html.py
backend/apps/gateway/: admin.py  auth.py  models.py  service.py  urls.py  views.py
backend/apps/gateway/migrations/: 0001_initial.py  0002_rename_gateway_msg_platform_delivered_idx_gateway_gat_platfor_46255d_idx.py
backend/apps/gateway/tests/: conftest.py  settings.py  test_api.py  urls.py
backend/apps/hostlink/: admin.py  apps.py  auth.py  consumers.py  models.py  security.py  serializers.py  service.py  urls.py  views.py
backend/apps/hostlink/migrations/: 0001_initial.py
backend/apps/hostlink/tests/: test_approval.py  test_consumer_delivery.py  test_consumers.py  test_enroll.py  test_headless.py  test_models.py  test_pty_consumer.py  test_pty_inject.py  test_pty_reconcile.py  test_security.py  test_service.py  test_session_turn.py
backend/apps/hosts/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/hosts/migrations/: 0001_initial.py
backend/apps/hosts/tests/: test_api.py  test_tasks.py
backend/apps/matrix/: admin.py  apps.py  client.py  models.py  render.py  service.py
backend/apps/matrix/migrations/: 0001_initial.py
backend/apps/matrix/tests/: test_render.py  test_service.py
backend/apps/messaging/: routing.py
backend/apps/messaging/tests/: test_routing.py
backend/apps/observe/: apps.py  delivery.py  formatting.py  observer.py  parser.py  service.py  validators.py
backend/apps/observe/runtimes/: __init__.py  aider.py  claude_code.py  codex.py  gemini.py  opencode.py
backend/apps/observe/tests/: test_deliver_turn_active.py  test_delivery.py  test_formatting.py  test_multi_runtime.py  test_observe.py  test_runtime_aider.py  test_runtime_codex.py  test_runtime_gemini.py  test_runtime_opencode.py  test_runtimes.py  test_service.py
backend/apps/policies/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/policies/migrations/: 0001_initial.py
backend/apps/policies/tests/: test_api.py  test_models.py  test_permissions.py
backend/apps/projects/: admin.py  models.py  serializers.py  urls.py
backend/apps/projects/migrations/: 0001_initial.py
backend/apps/projects/tests/: test_api.py
backend/apps/prompts/: models.py  render.py  service.py
backend/apps/prompts/migrations/: 0001_initial.py
backend/apps/prompts/surfaces/: telegram.py
backend/apps/prompts/tests/: test_models.py  test_render.py  (+1 more)
backend/apps/setup/: apps.py  auth.py  env_writer.py  models.py  page.py  serializers.py  telegram_flow.py  urls.py  views.py
backend/apps/skills/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/slash/: admin.py  apps.py  fleet_dashboard.py  models.py  parser.py  urls.py
backend/apps/supervisor/: activity.py  apps.py  brain.py  classifier.py  digest.py  fleet_state.py  push.py  redact.py
backend/apps/telegram/: models.py  service.py  telegram_api.py
backend/apps/threads/: admin.py  apps.py  consumers.py  dispatch.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/tier2/: admin.py  apps.py  base.py  models.py  ollama.py  urls.py
backend/config/: asgi.py  celery.py  health.py  routing.py  urls.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
backend/tests/: test_health.py
connectors/orc-mcp/: README.md  pyproject.toml
connectors/orc-mcp/claude/: openremote-control.md
connectors/orc-mcp/orc_mcp/: __init__.py  client.py  codex_discovery.py  pair.py  server.py  signing.py
connectors/orc-mcp/tests/: test_client.py  test_codex_discovery.py  test_pair.py  test_signing.py
host-agent/: pyproject.toml
host-agent/agent_host/: __init__.py  __main__.py  claude_headless.py  cli.py  codex_engine.py  config.py  daemon.py  discovery.py  enroll.py  input_policy.py  interactive_engine.py  pty_session.py  pty_stream.py  queue.py  run_cmd.py  sdk_session.py  signing.py  tailer.py  transcript_paths.py  transcript_tail.py  wsclient.py
host-agent/tests/: fake_claude.py  fake_codex.py  test_cli.py  test_codex_engine.py  test_config.py  test_daemon.py  test_drive_e2e.py  test_enroll.py  test_fleet_f3_host.py  test_headless.py  test_input_policy.py  test_interactive_engine.py  test_pty_reconcile.py  test_queue.py  test_run_cmd.py  test_sdk_session.py  test_signing.py  test_submit_settle.py  test_tailer.py  test_transcript_paths.py  test_transcript_tail.py  test_wsclient.py  test_wsclient_codex.py  test_wsclient_interactive.py  test_wsclient_pty_inject.py  test_wsclient_tail.py
(+138 files in other folders)
