[project]
name = "openremote-control-backend"
version = "0.0.1"
description = "Backend for OpenRemote Control"
requires-python = ">=3.13"
dependencies = [
    "Django>=5.2,<6.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "channels[daphne]>=4.2",
    "channels-redis>=4.2",
    "celery>=5.4",
    "psycopg[binary]>=3.2",
    "redis>=5.0,<9",
    "django-redis>=5.4",
    "cryptography>=43.0",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "gunicorn>=23.0",
    "httpx>=0.27",
    "segno>=1.6",
    "uvicorn[standard]>=0.30",
    "whitenoise>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24,<1",
    "factory-boy>=3.3",
    # ruff/bandit are pinned to a minor range: they gate CI (blocking steps), and an
    # unpinned floor lets a new release silently turn CI red with no code change.
    "ruff>=0.15,<0.16",
    "mypy>=1.11",
    "bandit[toml]>=1.9,<2",
    "coverage>=7.6",
]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.extend-per-file-ignores]
"config/settings/*.py" = ["F403", "F405"]
"*/migrations/*.py" = ["I001"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.hatch.build.targets.wheel]
packages = ["config", "apps"]
