[project]
name = "orc-mcp"
version = "0.1.0"
description = "OpenRemote-Control universal MCP bridge — supervise any MCP-capable agent from your chat."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
orc-mcp = "orc_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orc_mcp"]
